<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context=".AboutActivity">


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/backgroundColor"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        >



            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="5dp">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gitlogo"
                    />


                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Developed by Fawaz Ahmed"
                    android:textColor="#FFFF"
                    android:textSize="20sp"
                    android:gravity="center"

                    />
                <TextView
                    android:id="@+id/repo"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repoLink"
                    android:textColor="#FFFF"
                    android:textSize="15sp"
                    android:gravity="center"

                    />

                <!--This View serves as a visual divider between list items-->
                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorPrimaryDark"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    >


                    <ImageView
                        android:layout_marginLeft="20dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/git"/>

                    <TextView
                        android:id="@+id/github"
                        android:layout_marginLeft="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/github"
                        android:textColor="#FFFF"
                        android:textSize="15sp"


                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    >


                    <ImageView
                        android:layout_marginLeft="20dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/instagram"/>

                    <TextView
                        android:id="@+id/insta"
                        android:layout_marginLeft="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/insta"
                        android:textColor="#FFFF"
                        android:textSize="15sp"


                        />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    >


                    <ImageView
                        android:layout_marginLeft="20dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/twitter"/>

                    <TextView
                        android:id="@+id/twitter"
                        android:layout_marginLeft="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter"
                        android:textColor="#FFFF"
                        android:textSize="15sp"


                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    >


                    <ImageView
                        android:layout_marginLeft="20dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/linkedin"/>
                    <TextView
                        android:id="@+id/linkedin"
                        android:layout_marginLeft="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/linkedin"
                        android:textColor="#FFFF"
                        android:textSize="15sp"


                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    >


                    <ImageView
                        android:layout_marginLeft="20dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/snapchat"/>

                    <TextView

                        android:layout_marginLeft="6dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=" iamfauz"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"


                        />
                </LinearLayout>



            </LinearLayout>





    </android.support.v7.widget.CardView>

</RelativeLayout>